--- a/index.css
+++ b/index.css
@@ -14,10 +14,14 @@ box-shadow: 0 10px 10px rgba(0, 0, 0, 0.199);
   display: flex;
   justify-content: space-between;
 }
+.logo{
+  margin: 0px 0px 0px 30px;
+}
 .navbar .logo img {
   margin-right: 5px;
 }
 .navbar .logo{
+  margin-right: 505px;
   font-size: 20px;
   color: black;
   text-decoration: none;
@@ -36,4 +40,8 @@ box-shadow: 0 10px 10px rgba(0, 0, 0, 0.199);
   background-color: blue;
   color: white;
   border-radius: 5px;
+}
+img{
+  margin-left: 10px;
+  
 }
