--- a/index.css
+++ b/index.css
@@ -1,47 +1,64 @@
-body{
-  background-color: lightgray;
-  margin: 0px;
+body {
+  background-color: lightgrey;
+  margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.navbar{
-background-color: white;
-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.199);
+.navbar {
+  background-color: white;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.027);
 }
-.navbar nav{
+
+.navbar nav {
   max-width: 900px;
   margin: 0 auto;
-  padding: 0px;
-  display: flex;
-  justify-content: space-between;
+  padding: 10px 0;
 }
-.logo{
-  margin: 0px 0px 0px 30px;
-}
-.navbar .logo img {
-  margin-right: 5px;
-}
-.navbar .logo{
-  margin-right: 505px;
+.navbar .logo {
   font-size: 20px;
   color: black;
   text-decoration: none;
+  display: flex;
+  align-items: center;
 }
-.navbar ul li a{
+.navbar .logo img {
+  margin-right: 10px;
+}
+.navbar ul li {
+  display: inline;
+}
+.navbar ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.navbar ul li a {
   color: blue;
   text-decoration: none;
   padding: 10px 15px;
   display: inline-block;
 }
-.navbar ul li{
-  margin: 0px;
-  padding: 0px  ;
-  }
-.navbar ul li a.active{
+.navbar ul li a.active {
   background-color: blue;
   color: white;
   border-radius: 5px;
 }
-img{
-  margin-left: 10px;
-  
+.navbar nav {
+  display: flex;
+
+  justify-content: space-between;
+}
+.navbar.navbar-inverse{
+  background-color: black;
+}
+.navbar.navbar-inverse .logo{
+  color: white;
+}
+.navbar.navbar-inverse ul li a {
+  color: white;
+
+}
+.navbar.navbar-inverse ul li a.active{
+  color: black;
+  background-color: white;
 }
